--- a/style.css
+++ b/style.css
@@ -43,3 +43,14 @@
 .catagories img{
     width: 100px;
 }
+.card{
+    border: none;
+    border-radius: 10px;
+    
+    box-shadow: 5px 5px 10px lightgray;
+    
+}
+.card-footer{
+    background-color: white;
+    border-top: none;
+}
